minor changes added

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
     display: block;
   }
   
-  #my-form input[type='text'],#my-form input[type='email']{
+  #my-form input[type='text']{
     width: 100%;
     padding: 8px;
     margin-bottom: 10px;
@@ -62,12 +62,6 @@
   .btn:hover {
     background: #444;
   }
-  
-  .bg-dark {
-    background: #333;
-    color: #fff;
-  }
-  
   .error {
     background: orangered;
     color: #fff;
