--- a/style.css
+++ b/style.css
@@ -35,18 +35,29 @@
     padding: 2rem;
     background: #f4f4f4;
   }
+
+  #my-form h1{
+    padding-bottom: 20px;
+  }
   
   #my-form label {
     display: block;
+    font-weight: bold;
   }
   
   #my-form input[type='text']{
     width: 100%;
     padding: 8px;
+    font-size: small;
     margin-bottom: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
   }
+
+  #my-form input::placeholder {
+    color: gray; 
+    opacity: 0.7; 
+}
   
   .btn {
     display: block;
